# dune-partition

./: .gitignore  Makefile.am  README  configure.ac  dune-partition.pc.in  dune.module
doc/: Makefile.am
doc/doxygen/: Doxylocal
dune/: Makefile.am
dune/partition/: Makefile.am  partition.hh
m4/: Makefile.am  dune-partition.m4
src/: Makefile.am  dune_partition.cc
src/data/: Makefile.am  dziuk.dgf  parameter  sphere.dgf  torus.dgf  unitcube-2d.dgf
src/output/: .gitignore  Makefile.am
src/src/: .gitignore  Makefile.am  elliptic.hh  femscheme.hh  heatmodel.hh  heatscheme.hh  model.hh  partition.cc  partition.hh  partitionscheme.hh  probleminterface.hh  rhs.hh  temporalprobleminterface.hh
